[tool.poetry]
name = "chatbot-streamlit"
version = "0.1.0"
description = ""
authors = ["Username <your.email>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
openai = "^1.30.1"
langchain = "^0.2.0"


[tool.poetry.group.confg.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
